style: fix alignment for search output, move it inside a relative div with the search input to center it

--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -98,7 +98,7 @@
   flex-direction: column;
   align-items: start;
   position: absolute;
-  top: 5rem;
+  top: 6rem;
   right: -2rem;
   padding: 1rem;
 }
